--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,3 @@
-:root {
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -28,6 +25,34 @@ a {
   color: inherit;
   text-decoration: none;
   font-weight: 600;
+}
+input {
+  background-color: transparent;
+  border: 1px solid #000;
+  border-radius: 6px;
+  color: #000;
+  padding: 0;
+  height: 30px;
+}
+
+button {
+  background-color: rgb(0, 113, 225);
+  width: 100px;
+  height: 30px;
+  border: 0;
+  border-radius: 6px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+button:hover {
+  background-color: #fff;
+  color: rgb(0, 113, 225);
+  border: 1px solid rgb(0, 113, 225);
+  transition: all ease 0.3s;
+}
+.todo {
+  border: 1px solid #000;
+  cursor: pointer;
 }
 
 @media (prefers-color-scheme: dark) {
